album/album-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: album-ingress
  namespace: album
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: album
            port: 
              number: 80
        path: /album
        pathType: Prefix
status:
  loadBalancer: {}
